--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -88,6 +88,95 @@
     "                \n",
     "delete_patient()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3076f110-6f05-41f9-9315-555bea205cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_appointment():\n",
+    "    patient_cin = input(\"Enter the patient's CIN:\")\n",
+    "    date = input(\"Enter the date of the appointment (mm/dd/yyyy):\")\n",
+    "    time = input(\"Enter the time of the appointment (hh:mm):\")\n",
+    "    \n",
+    "    with open(\"rdv.txt\", \"a+\") as f:\n",
+    "        f.write(\"%s;%s;%s\\n\" % (patient_cin, date, time))\n",
+    "\n",
+    "# Example usage:\n",
+    "add_appointment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90603e1-9ace-4979-920d-2b8e993ed8c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cancel_appointment():\n",
+    "    patient_cin = input(\"Enter the patient's CIN:\")\n",
+    "    date = input(\"Enter the date of the appointment (mm/dd/yyyy):\")\n",
+    "    time = input(\"Enter the time of the appointment (hh:mm):\")\n",
+    "    \n",
+    "    appointments = []\n",
+    "    # Read all appointments from file and store in a list\n",
+    "    with open(\"rdv.txt\", \"r\") as f:\n",
+    "        for line in f:\n",
+    "            appointments.append(line.strip())\n",
+    "    \n",
+    "    # Remove the appointment that matches the given patient_id, date, and time\n",
+    "    appointments = [a for a in appointments if not (a.split(\";\")[0] == patient_cin and a.split(\";\")[1] == date and a.split(\";\")[2] == time)]\n",
+    "    \n",
+    "    # Write the updated list of appointments back to the file\n",
+    "    with open(\"rdv.txt\", \"w\") as f:\n",
+    "        for appointment in appointments:\n",
+    "            f.write(\"%s\\n\" % appointment)\n",
+    "\n",
+    "# Example usage:\n",
+    "cancel_appointment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c89516c-ea6c-4b10-885a-3ae480dfaa35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modify_appointment():\n",
+    "    patient_id = input(\"Enter the patient's ID:\")\n",
+    "    old_date = input(\"Enter the current date of the appointment (mm/dd/yyyy):\")\n",
+    "    old_time = input(\"Enter the current time of the appointment (hh:mm):\")\n",
+    "    new_date = input(\"Enter the new date of the appointment (mm/dd/yyyy):\")\n",
+    "    new_time = input(\"Enter the new time of the appointment (hh:mm):\")\n",
+    "    \n",
+    "    appointments = []\n",
+    "    # Read all appointments from file and store in a list\n",
+    "    with open(\"rdv.txt\", \"r\") as f:\n",
+    "        for line in f:\n",
+    "            appointments.append(line.strip())\n",
+    "    \n",
+    "    # Modify the appointment that matches the given patient_id, old_date, and old_time\n",
+    "    appointments = [a.replace(\"%s;%s;%s\" % (patient_id, old_date, old_time), \"%s;%s;%s\" % (patient_id, new_date, new_time)) for a in appointments]\n",
+    "    \n",
+    "    # Write the updated list of appointments back to the file\n",
+    "    with open(\"rdv.txt\", \"w\") as f:\n",
+    "        for appointment in appointments:\n",
+    "            f.write(\"%s\\n\" % appointment)\n",
+    "\n",
+    "# Example usage:\n",
+    "modify_appointment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9bbec79-a89f-4430-9db4-517944c062b0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
