--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -67,7 +67,7 @@
    ],
    "source": [
     "def delete_patient():\n",
-    "    word=input(\"Enter the line to delete: \")\n",
+    "    word=input(\"Enter the cin of patient to delete: \")\n",
     "    # read the entire file into a list of lines\n",
     "    with open(\"DPatient.txt\", 'r') as f:\n",
     "        lines = f.readlines()\n",
@@ -91,92 +91,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3076f110-6f05-41f9-9315-555bea205cb2",
+   "execution_count": 5,
+   "id": "c9bbec79-a89f-4430-9db4-517944c062b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the patient's CIN: 99\n",
+      "Enter the date of the appointment DD/MM/YYYY: 22/01/1994\n",
+      "Enter the the time of the appointment HH:MM: 08:15\n",
+      "99 22/01/1994 ['08:15']\n"
+     ]
+    }
+   ],
    "source": [
-    "def add_appointment():\n",
-    "    patient_cin = input(\"Enter the patient's CIN:\")\n",
-    "    date = input(\"Enter the date of the appointment (mm/dd/yyyy):\")\n",
-    "    time = input(\"Enter the time of the appointment (hh:mm):\")\n",
-    "    \n",
-    "    with open(\"rdv.txt\", \"a+\") as f:\n",
-    "        f.write(\"%s;%s;%s\\n\" % (patient_cin, date, time))\n",
+    "rdvs={\"cin\":[], \"date\":[], \"time\":[]}\n",
     "\n",
-    "# Example usage:\n",
+    "def add_appointment():\n",
+    "    cin = input(\"Enter the patient's CIN: \")\n",
+    "    date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "    temp = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "\n",
+    "    rdvs[\"cin\"].append(cin)\n",
+    "    rdvs[\"date\"].append(date)\n",
+    "    rdvs[\"time\"].append(temp)\n",
+    "\n",
+    "    # Open the file in write mode\n",
+    "    with open(\"rdv.txt\", \"a\") as file:\n",
+    "        for i in range(len(rdvs[\"cin\"])):\n",
+    "            print( rdvs[\"cin\"][i],rdvs[\"date\"][i],rdvs[\"time\"])\n",
+    "            file.write('%s;%s;%s\\n' % (rdvs[\"cin\"][i],rdvs[\"date\"][i],rdvs[\"time\"][i]))\n",
+    "        \n",
     "add_appointment()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f90603e1-9ace-4979-920d-2b8e993ed8c6",
+   "execution_count": 7,
+   "id": "3d47c697",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cin': ['99'], 'date': ['22/01/1994'], 'time': ['08:15']}\n"
+     ]
+    }
+   ],
    "source": [
-    "def cancel_appointment():\n",
-    "    patient_cin = input(\"Enter the patient's CIN:\")\n",
-    "    date = input(\"Enter the date of the appointment (mm/dd/yyyy):\")\n",
-    "    time = input(\"Enter the time of the appointment (hh:mm):\")\n",
-    "    \n",
-    "    appointments = []\n",
-    "    # Read all appointments from file and store in a list\n",
-    "    with open(\"rdv.txt\", \"r\") as f:\n",
-    "        for line in f:\n",
-    "            appointments.append(line.strip())\n",
-    "    \n",
-    "    # Remove the appointment that matches the given patient_id, date, and time\n",
-    "    appointments = [a for a in appointments if not (a.split(\";\")[0] == patient_cin and a.split(\";\")[1] == date and a.split(\";\")[2] == time)]\n",
-    "    \n",
-    "    # Write the updated list of appointments back to the file\n",
-    "    with open(\"rdv.txt\", \"w\") as f:\n",
-    "        for appointment in appointments:\n",
-    "            f.write(\"%s\\n\" % appointment)\n",
-    "\n",
-    "# Example usage:\n",
-    "cancel_appointment()"
+    "print(rdvs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8c89516c-ea6c-4b10-885a-3ae480dfaa35",
+   "execution_count": 8,
+   "id": "5de950dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the patient's CIN: 99\n",
+      "Enter the date of the appointment DD/MM/YYYY: sd\n",
+      "Enter the the time of the appointment HH:MM: 33\n"
+     ]
+    }
+   ],
    "source": [
-    "def modify_appointment():\n",
-    "    patient_id = input(\"Enter the patient's ID:\")\n",
-    "    old_date = input(\"Enter the current date of the appointment (mm/dd/yyyy):\")\n",
-    "    old_time = input(\"Enter the current time of the appointment (hh:mm):\")\n",
-    "    new_date = input(\"Enter the new date of the appointment (mm/dd/yyyy):\")\n",
-    "    new_time = input(\"Enter the new time of the appointment (hh:mm):\")\n",
-    "    \n",
-    "    appointments = []\n",
-    "    # Read all appointments from file and store in a list\n",
-    "    with open(\"rdv.txt\", \"r\") as f:\n",
-    "        for line in f:\n",
-    "            appointments.append(line.strip())\n",
-    "    \n",
-    "    # Modify the appointment that matches the given patient_id, old_date, and old_time\n",
-    "    appointments = [a.replace(\"%s;%s;%s\" % (patient_id, old_date, old_time), \"%s;%s;%s\" % (patient_id, new_date, new_time)) for a in appointments]\n",
-    "    \n",
-    "    # Write the updated list of appointments back to the file\n",
-    "    with open(\"rdv.txt\", \"w\") as f:\n",
-    "        for appointment in appointments:\n",
-    "            f.write(\"%s\\n\" % appointment)\n",
+    "def delete_appointment():\n",
+    "    cin = input(\"Enter the patient's CIN: \")\n",
+    "    date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "    time = input(\"Enter the the time of the appointment HH:MM: \")\n",
     "\n",
-    "# Example usage:\n",
-    "modify_appointment()"
+    "    # Open the file in read mode\n",
+    "    with open(\"rdv.txt\", \"r\") as file:\n",
+    "        # Read the file into a list of lines\n",
+    "        lines = file.readlines()\n",
+    "\n",
+    "    # Open the file in write mode\n",
+    "    with open(\"rdv.txt\", \"w\") as file:\n",
+    "        # Loop over the lines in the file\n",
+    "        for line in lines:\n",
+    "            # Split the line into its component parts\n",
+    "            parts = line.split(\";\")\n",
+    "            \n",
+    "            # If the CIN, date, and time do not match the ones provided by the user,\n",
+    "            # write the line back to the file\n",
+    "            if parts[0] != cin or parts[1] != date or parts[2] != time:\n",
+    "                file.write(line)\n",
+    "delete_appointment()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9bbec79-a89f-4430-9db4-517944c062b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
