add patient exception handling

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Please enter a CIN: sdf\n",
@@ -35,20 +35,38 @@
     "DPatient={\"cin\":[], \"nom\":[], \"prenom\":[], \"sexe\": [],\"age\": []}\n",
     "\n",
     "def add_patient():\n",
+    "    while True:\n",
+    "        cin = input('Please enter a CIN:')\n",
+    "        if cin.isdigit() and len(cin) == 8:\n",
+    "            if cin not in DPatient[\"cin\"]:\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"This CIN is already in use. Please enter a valid CIN.\")\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please enter a 8-digit integer.\")\n",
     "    \n",
-    "    DPatient[\"cin\"].append(input('Please enter a CIN:'))\n",
+    "    DPatient[\"cin\"].append(cin)\n",
     "    DPatient[\"nom\"].append(input('Please enter a First Name:'))\n",
     "    DPatient[\"prenom\"].append(input('Please enter a Last Name:'))\n",
     "    DPatient[\"sexe\"].append(input('Please enter \"Male\" or \"Female\":'))\n",
-    "    DPatient[\"age\"].append(input(\"Please enter the patient's age:\"))\n",
     "    \n",
-    "add_patient()\n",
-    "add_patient()\n",
+    "    while True:\n",
+    "        age = input(\"Please enter the patient's age:\")\n",
+    "        if age.isdigit() and int(age) > 0:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid age. Please enter a positive integer.\")\n",
+    "    \n",
+    "    DPatient[\"age\"].append(age)\n",
+    "    \n",
     "\n",
-    "with open(\"DPatient.txt\", 'a+') as f: \n",
-    "    for i in range(len(DPatient[\"cin\"])):\n",
-    "        print( DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i])\n",
-    "        f.write('%s;%s;%s;%s;%s\\n' % (DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i]))"
+    "    with open(\"DPatient.txt\", 'a+') as f: \n",
+    "        for i in range(len(DPatient[\"cin\"])):\n",
+    "            print( DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i])\n",
+    "            f.write('%s;%s;%s;%s;%s\\n' % (DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i]))\n",
+    "\n",
+    "add_patient()\n",
+    "add_patient()\n"
    ]
   },
   {
@@ -58,7 +76,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Enter the line to delete:  Anis\n"
@@ -189,7 +207,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -203,7 +221,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "4ce5e9eb685f2cbd0e3503ebb85761aaa408303647e20907299c603e3c6f3f27"
+   }
   }
  },
  "nbformat": 4,
