Add patient/delete patient optimized

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,38 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "b8da61df",
+   "execution_count": 17,
+   "id": "d387a7f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please enter a CIN: sdf\n",
-      "Please enter a First Name: Hamdi\n",
-      "Please enter a Last Name: sds\n",
-      "Please enter \"Male\" or \"Female\": fs\n",
-      "Please enter the patient's age: fsd\n",
-      "Please enter a CIN: f\n",
-      "Please enter a First Name: Anis\n",
-      "Please enter a Last Name: sdfsd\n",
-      "Please enter \"Male\" or \"Female\": fsd\n",
-      "Please enter the patient's age: fsdf\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sdf Hamdi sds fs fsd\n",
-      "f Anis sdfsd fsd fsdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "DPatient={\"cin\":[], \"nom\":[], \"prenom\":[], \"sexe\": [],\"age\": []}\n",
-    "\n",
+    "rdvs={\"cin\":[], \"date\":[], \"time\":[]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b8da61df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def add_patient():\n",
     "    while True:\n",
     "        cin = input('Please enter a CIN:')\n",
@@ -45,11 +29,28 @@
     "        else:\n",
     "            print(\"Invalid CIN. Please enter a 8-digit integer.\")\n",
     "    \n",
-    "    DPatient[\"cin\"].append(cin)\n",
-    "    DPatient[\"nom\"].append(input('Please enter a First Name:'))\n",
-    "    DPatient[\"prenom\"].append(input('Please enter a Last Name:'))\n",
-    "    DPatient[\"sexe\"].append(input('Please enter \"Male\" or \"Female\":'))\n",
+    "    while True:\n",
+    "        nom = input('Please enter a First Name:')\n",
+    "        if nom.isalpha():\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid first name. Please enter a string containing only letters.\")\n",
     "    \n",
+    "    while True:\n",
+    "        prenom = input('Please enter a Last Name:')\n",
+    "        if prenom.isalpha():\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid last name. Please enter a string containing only letters.\")\n",
+    "    \n",
+    "    while True:\n",
+    "        sexe = input('Please enter \"Male\" or \"Female\":')\n",
+    "        sexe_lower = sexe.lower()  \n",
+    "        if sexe_lower in [\"male\", \"female\"]:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid sex. Please enter either 'Male' or 'Female'.\")\n",
+    "            \n",
     "    while True:\n",
     "        age = input(\"Please enter the patient's age:\")\n",
     "        if age.isdigit() and int(age) > 0:\n",
@@ -57,16 +58,15 @@
     "        else:\n",
     "            print(\"Invalid age. Please enter a positive integer.\")\n",
     "    \n",
+    "    DPatient[\"cin\"].append(cin)\n",
+    "    DPatient[\"nom\"].append(nom)\n",
+    "    DPatient[\"prenom\"].append(prenom)\n",
+    "    DPatient[\"sexe\"].append(sexe)\n",
     "    DPatient[\"age\"].append(age)\n",
     "    \n",
-    "\n",
-    "    with open(\"DPatient.txt\", 'a+') as f: \n",
-    "        for i in range(len(DPatient[\"cin\"])):\n",
-    "            print( DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i])\n",
-    "            f.write('%s;%s;%s;%s;%s\\n' % (DPatient[\"cin\"][i],DPatient[\"nom\"][i],DPatient[\"prenom\"][i],DPatient[\"sexe\"][i],DPatient[\"age\"][i]))\n",
-    "\n",
-    "add_patient()\n",
-    "add_patient()\n"
+    "    \n",
+    "    with open(\"DPatient.txt\", 'a') as f:\n",
+    "        f.write('%s;%s;%s;%s;%s\\n' % (cin, nom, prenom, sexe, age))\n"
    ]
   },
   {
@@ -85,31 +85,48 @@
    ],
    "source": [
     "def delete_patient():\n",
-    "    word=input(\"Enter the cin of patient to delete: \")\n",
-    "    # read the entire file into a list of lines\n",
-    "    with open(\"DPatient.txt\", 'r') as f:\n",
-    "        lines = f.readlines()\n",
-    "\n",
-    "    # open the file in write mode to clear its contents\n",
-    "    with open(\"DPatient.txt\", 'w') as f:\n",
-    "        pass\n",
+    "    cin_found = False  # flag to track if the given CIN was found in the file\n",
     "    \n",
-    "    # re-open the file in append mode\n",
-    "    with open(\"DPatient.txt\", 'a') as f:\n",
+    "    while True:\n",
+    "        word = input(\"Enter the cin of patient to delete: \")\n",
     "        \n",
-    "        # iterate over the lines\n",
-    "        for line in lines:\n",
-    "            # check if the line contains the given word\n",
-    "            if word not in line:\n",
-    "                # if the word is not in the line, write the line to the file\n",
-    "                f.write(line)\n",
-    "                \n",
-    "delete_patient()"
+    "        # read the entire file into a list of lines\n",
+    "        with open(\"DPatient.txt\", 'r') as f:\n",
+    "            lines = f.readlines()\n",
+    "\n",
+    "        # open the file in write mode to clear its contents\n",
+    "        with open(\"DPatient.txt\", 'w') as f:\n",
+    "            pass\n",
+    "\n",
+    "        # re-open the file in append mode\n",
+    "        with open(\"DPatient.txt\", 'a') as f:\n",
+    "\n",
+    "            # iterate over the lines\n",
+    "            for line in lines:\n",
+    "                # check if the line contains the given word\n",
+    "                if word in line:\n",
+    "                    cin_found = True  # update flag to indicate that the CIN was found\n",
+    "                else:\n",
+    "                    # if the word is not in the line, write the line to the file\n",
+    "                    f.write(line)\n",
+    "        \n",
+    "        # check if the given CIN was found in the file\n",
+    "        if cin_found:\n",
+    "            # if the CIN was found, break out of the loop\n",
+    "            break\n",
+    "        else:\n",
+    "            # if the CIN was not found, ask the user if they want to try again or abort\n",
+    "            response = input(\"CIN not found. Enter a new CIN or 'abort' to exit: \")\n",
+    "            if response.lower() == 'abort':\n",
+    "                # if the user wants to abort, break out of the loop\n",
+    "                break\n",
+    "\n",
+    "delete_patient()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "id": "c9bbec79-a89f-4430-9db4-517944c062b0",
    "metadata": {},
    "outputs": [
@@ -117,30 +134,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the patient's CIN: 99\n",
-      "Enter the date of the appointment DD/MM/YYYY: 22/01/1994\n",
-      "Enter the the time of the appointment HH:MM: 08:15\n",
-      "99 22/01/1994 ['08:15']\n"
+      "Enter the patient's CIN: 9\n",
+      "Enter the date of the appointment DD/MM/YYYY: ss\n",
+      "Enter the the time of the appointment HH:MM: ss\n"
      ]
     }
    ],
    "source": [
-    "rdvs={\"cin\":[], \"date\":[], \"time\":[]}\n",
-    "\n",
     "def add_appointment():\n",
-    "    cin = input(\"Enter the patient's CIN: \")\n",
+    "    cin_rdv = input(\"Enter the patient's CIN: \")\n",
     "    date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
-    "    temp = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "    temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
     "\n",
-    "    rdvs[\"cin\"].append(cin)\n",
+    "    rdvs[\"cin\"].append(cin_rdv)\n",
     "    rdvs[\"date\"].append(date)\n",
-    "    rdvs[\"time\"].append(temp)\n",
+    "    rdvs[\"time\"].append(temps)\n",
     "\n",
     "    # Open the file in write mode\n",
     "    with open(\"rdv.txt\", \"a\") as file:\n",
-    "        for i in range(len(rdvs[\"cin\"])):\n",
-    "            print( rdvs[\"cin\"][i],rdvs[\"date\"][i],rdvs[\"time\"])\n",
-    "            file.write('%s;%s;%s\\n' % (rdvs[\"cin\"][i],rdvs[\"date\"][i],rdvs[\"time\"][i]))\n",
+    "        file.write('%s;%s;%s\\n' % (cin_rdv, date, temps))\n",
     "        \n",
     "add_appointment()"
    ]
@@ -202,6 +214,36 @@
     "            if parts[0] != cin or parts[1] != date or parts[2] != time:\n",
     "                file.write(line)\n",
     "delete_appointment()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5ce5cba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a CIN:3333333\n",
+      "Invalid CIN. Please enter a 8-digit integer.\n",
+      "Please enter a CIN:33333333\n",
+      "This CIN is already in use. Please enter a valid CIN.\n",
+      "Please enter a CIN:111111\n",
+      "Invalid CIN. Please enter a 8-digit integer.\n",
+      "Please enter a CIN:11111111\n",
+      "Please enter a First Name:King\n",
+      "Please enter a Last Name:Kong\n",
+      "Please enter \"Male\" or \"Female\":amel\n",
+      "Invalid sex. Please enter either 'Male' or 'Female'.\n",
+      "Please enter \"Male\" or \"Female\":male\n",
+      "Please enter the patient's age:55\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_patient()"
    ]
   }
  ],
