--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "d387a7f4",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "b8da61df",
    "metadata": {},
    "outputs": [],
@@ -66,6 +66,7 @@
     "    \n",
     "    \n",
     "    with open(\"DPatient.txt\", 'a') as f:\n",
+    "        print(cin, nom, prenom, sexe, age)\n",
     "        f.write('%s;%s;%s;%s;%s\\n' % (cin, nom, prenom, sexe, age))\n"
    ]
   },
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "5ce5cba0",
    "metadata": {},
    "outputs": [
@@ -226,19 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please enter a CIN:3333333\n",
-      "Invalid CIN. Please enter a 8-digit integer.\n",
-      "Please enter a CIN:33333333\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:111111\n",
-      "Invalid CIN. Please enter a 8-digit integer.\n",
-      "Please enter a CIN:11111111\n",
-      "Please enter a First Name:King\n",
-      "Please enter a Last Name:Kong\n",
-      "Please enter \"Male\" or \"Female\":amel\n",
-      "Invalid sex. Please enter either 'Male' or 'Female'.\n",
-      "Please enter \"Male\" or \"Female\":male\n",
-      "Please enter the patient's age:55\n"
+      "Invalid last name. Please enter a string containing only letters.\n"
      ]
     }
    ],
@@ -263,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 (main, Oct 24 2022, 18:26:48) [MSC v.1933 64 bit (AMD64)]"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
