optimized add/del appointment

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,18 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d387a7f4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "from datetime import datetime\n",
+    "\n",
     "DPatient={\"cin\":[], \"nom\":[], \"prenom\":[], \"sexe\": [],\"age\": []}\n",
     "rdvs={\"cin\":[], \"date\":[], \"time\":[]}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b8da61df",
    "metadata": {},
    "outputs": [],
@@ -67,23 +70,16 @@
     "    \n",
     "    with open(\"DPatient.txt\", 'a') as f:\n",
     "        print(cin, nom, prenom, sexe, age)\n",
-    "        f.write('%s;%s;%s;%s;%s\\n' % (cin, nom, prenom, sexe, age))\n"
+    "        f.write('%s;%s;%s;%s;%s\\n' % (cin, nom, prenom, sexe, age))\n",
+    "        print(\"Patient data successfully added.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5ef853aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the line to delete:  Anis\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def delete_patient():\n",
     "    cin_found = False  # flag to track if the given CIN was found in the file\n",
@@ -110,6 +106,7 @@
     "                else:\n",
     "                    # if the word is not in the line, write the line to the file\n",
     "                    f.write(line)\n",
+    "                    print(\"Patient data successfully deleted.\")\n",
     "        \n",
     "        # check if the given CIN was found in the file\n",
     "        if cin_found:\n",
@@ -117,35 +114,64 @@
     "            break\n",
     "        else:\n",
     "            # if the CIN was not found, ask the user if they want to try again or abort\n",
-    "            response = input(\"CIN not found. Enter a new CIN or 'abort' to exit: \")\n",
+    "            response = input(\"CIN not found. Enter a new CIN or 'Abort' to exit: \")\n",
     "            if response.lower() == 'abort':\n",
     "                # if the user wants to abort, break out of the loop\n",
-    "                break\n",
-    "\n",
-    "delete_patient()\n"
+    "                break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c9bbec79-a89f-4430-9db4-517944c062b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the patient's CIN: 9\n",
-      "Enter the date of the appointment DD/MM/YYYY: ss\n",
-      "Enter the the time of the appointment HH:MM: ss\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def add_appointment():\n",
-    "    cin_rdv = input(\"Enter the patient's CIN: \")\n",
-    "    date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
-    "    temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "    while True:\n",
+    "        cin_rdv = input(\"Enter the patient's CIN: \")\n",
+    "        if cin_rdv.isdigit() and len(cin_rdv) == 8:\n",
+    "            # Convert CIN to integer\n",
+    "            cin_rdv = int(cin_rdv)\n",
+    "            break\n",
+    "        print(\"Invalid CIN. CIN must be an 8-digit integer.\")\n",
+    "\n",
+    "    while True:\n",
+    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "        try:\n",
+    "            # Parse the date using the datetime.strptime function\n",
+    "            # If the date is in the correct format, this will return a datetime object\n",
+    "            appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            # If the date is not in the correct format, a ValueError is raised\n",
+    "            print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "\n",
+    "    while True:\n",
+    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "        try:\n",
+    "            # Parse the time using the datetime.strptime function\n",
+    "            # If the time is in the correct format, this will return a datetime object\n",
+    "            appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
+    "            break\n",
+    "        except ValueError:\n",
+    "            # If the time is not in the correct format, a ValueError is raised\n",
+    "            print(\"Invalid time format. Please use the format HH:MM.\")\n",
+    "\n",
+    "    # Create a datetime object for the entire appointment by combining the date and time\n",
+    "    appointment = datetime.combine(appointment_date, appointment_time.time())\n",
+    "\n",
+    "    # Check if an appointment already exists at the same date and time\n",
+    "    for c, d, t in zip(rdvs[\"cin\"], rdvs[\"date\"], rdvs[\"time\"]):\n",
+    "        if c == cin_rdv and d == date and t == temps:\n",
+    "            while True:\n",
+    "                choice = input(\"An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: \")\n",
+    "                if choice.lower() == \"change\":\n",
+    "                    break\n",
+    "                elif choice.lower() == \"abort\":\n",
+    "                    return\n",
+    "                else:\n",
+    "                    print(\"Invalid choice. Please enter 'Change' to input a new date and time or 'Abort' to abort.\")\n",
     "\n",
     "    rdvs[\"cin\"].append(cin_rdv)\n",
     "    rdvs[\"date\"].append(date)\n",
@@ -154,54 +180,42 @@
     "    # Open the file in write mode\n",
     "    with open(\"rdv.txt\", \"a\") as file:\n",
     "        file.write('%s;%s;%s\\n' % (cin_rdv, date, temps))\n",
-    "        \n",
-    "add_appointment()"
+    "        print(\"Appointment successfully added.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3d47c697",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cin': ['99'], 'date': ['22/01/1994'], 'time': ['08:15']}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rdvs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5de950dc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the patient's CIN: 99\n",
-      "Enter the date of the appointment DD/MM/YYYY: sd\n",
-      "Enter the the time of the appointment HH:MM: 33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def delete_appointment():\n",
-    "    cin = input(\"Enter the patient's CIN: \")\n",
+    "    # Read the file into a list of lines\n",
+    "    with open(\"rdv.txt\", \"r\") as file:\n",
+    "        lines = file.readlines()\n",
+    "\n",
+    "    # Flag to track whether the appointment was found\n",
+    "    found = False\n",
+    "\n",
+    "    # Loop until a valid CIN is entered\n",
+    "    while True:\n",
+    "        cin = input(\"Enter the patient's CIN: \")\n",
+    "        # Check if the CIN exists in any of the lines\n",
+    "        for line in lines:\n",
+    "            parts = line.split(\";\")\n",
+    "            if parts[0] == cin:\n",
+    "                found = True\n",
+    "                break\n",
+    "        # If the CIN was found, break out of the loop\n",
+    "        if found:\n",
+    "            break\n",
+    "        # If the CIN was not found, ask the user to enter a different one\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please try again.\")\n",
+    "\n",
     "    date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
     "    time = input(\"Enter the the time of the appointment HH:MM: \")\n",
-    "\n",
-    "    # Open the file in read mode\n",
-    "    with open(\"rdv.txt\", \"r\") as file:\n",
-    "        # Read the file into a list of lines\n",
-    "        lines = file.readlines()\n",
     "\n",
     "    # Open the file in write mode\n",
     "    with open(\"rdv.txt\", \"w\") as file:\n",
@@ -214,25 +228,46 @@
     "            # write the line back to the file\n",
     "            if parts[0] != cin or parts[1] != date or parts[2] != time:\n",
     "                file.write(line)\n",
+    "        # If the appointment was not found, ask the user to enter valid data or abort the operation\n",
+    "        if not found:\n",
+    "            print(\"Appointment not found. Please enter valid data or type 'Abort' to cancel the operation.\")\n",
+    "            choice = input()\n",
+    "            if choice.lower() != \"abort\":\n",
+    "                # Write the new appointment to the file\n",
+    "                file.write(f\"{cin};{date};{time}\\n\")\n",
+    "                print(\"Appointment successfully deleted.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed288502",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "delete_appointment()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ce5cba0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Invalid last name. Please enter a string containing only letters.\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "add_patient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e36db37b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_appointment()"
    ]
   }
  ],
@@ -252,11 +287,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "4ce5e9eb685f2cbd0e3503ebb85761aaa408303647e20907299c603e3c6f3f27"
+    "hash": "c2987bf884b33d4ac0d131f2cc512127de39608db1d626b88cf922dfeda625a8"
    }
   }
  },
