Add appointment bug fixed

--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -213,15 +213,48 @@
     "                while True:\n",
     "                    choice = input(\"An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: \")\n",
     "                    if choice.lower() == \"change\":\n",
+    "                        \n",
+    "                        while True:\n",
+    "                            date = input(\"Enter the new date of the appointment DD/MM/YYYY: \")\n",
+    "                            if date.lower() == \"abort\":\n",
+    "                                print(\"Operation aborted.\")\n",
+    "                                return\n",
+    "                            else:\n",
+    "                                try:\n",
+    "                                    # Parse the date using the datetime.strptime function\n",
+    "                                    # If the date is in the correct format, this will return a datetime object\n",
+    "                                    appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "                                    break\n",
+    "                                except ValueError:\n",
+    "                                    # If the date is not in the correct format, a ValueError is raised\n",
+    "                                    print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "\n",
+    "                        while True:\n",
+    "                            temps = input(\"Enter the new time of the appointment HH:MM: \")\n",
+    "                            if temps.lower() == \"abort\":\n",
+    "                                print(\"Operation aborted.\")\n",
+    "                                return\n",
+    "                            else:\n",
+    "                                try:\n",
+    "                                    # Parse the time using the datetime.strptime function\n",
+    "                                    # If the time is in the correct format, this will return a datetime object\n",
+    "                                    appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
+    "                                    break\n",
+    "                                except ValueError:\n",
+    "                                    # If the time is not in the correct format, a ValueError is raised\n",
+    "                                    print(\"Invalid time format. Please use the format HH:MM.\")\n",
     "                        break\n",
     "                    elif choice.lower() == \"abort\":\n",
+    "                        print(\"Operation aborted.\")\n",
     "                        return\n",
+    "                        break\n",
     "                    else:\n",
     "                        print(\"Invalid choice. Please enter 'Change' to input a new date and time or 'Abort' to abort.\")\n",
+    "                        \n",
     "\n",
-    "    rdvs[\"cin\"].append(cin_rdv)\n",
-    "    rdvs[\"date\"].append(date)\n",
-    "    rdvs[\"time\"].append(temps)   \n",
+    "    #rdvs[\"cin\"].append(cin_rdv)\n",
+    "    #rdvs[\"date\"].append(date)\n",
+    "    #rdvs[\"time\"].append(temps)   \n",
     "\n",
     "\n",
     "    # Open the file in write mode\n",
@@ -451,7 +484,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -465,7 +498,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c2987bf884b33d4ac0d131f2cc512127de39608db1d626b88cf922dfeda625a8"
+   }
   }
  },
  "nbformat": 4,
