--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "9dbb5287",
+   "execution_count": 1,
+   "id": "8d2c2c19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "id": "e419ee7f",
+   "execution_count": null,
+   "id": "f2a5d5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "70cd75a2",
+   "execution_count": null,
+   "id": "6f4c4443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,128 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "id": "16895c3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_appointment():\n",
-    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
-    "    def check_cin(cin_rdv):\n",
-    "        with open(\"DPatient.txt\", 'r') as f:\n",
-    "            for line in f:\n",
-    "                if cin_rdv in line:\n",
-    "                    return False\n",
-    "            return True\n",
-    "\n",
-    "    while True:\n",
-    "        cin_rdv = input('Please enter a CIN:')\n",
-    "        if cin_rdv.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "\n",
-    "        if cin_rdv.isdigit() and len(cin_rdv) == 8:\n",
-    "            if not check_cin(cin_rdv):\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
-    "        else:\n",
-    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
-    "\n",
-    "\n",
-    "    while True:\n",
-    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
-    "        if date.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "        else:\n",
-    "            try:\n",
-    "                # Parse the date using the datetime.strptime function\n",
-    "                # If the date is in the correct format, this will return a datetime object\n",
-    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
-    "                break\n",
-    "            except ValueError:\n",
-    "                # If the date is not in the correct format, a ValueError is raised\n",
-    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
-    "\n",
-    "    while True:\n",
-    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
-    "        if temps.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "        else:\n",
-    "            try:\n",
-    "                # Parse the time using the datetime.strptime function\n",
-    "                # If the time is in the correct format, this will return a datetime object\n",
-    "                appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
-    "                break\n",
-    "            except ValueError:\n",
-    "                # If the time is not in the correct format, a ValueError is raised\n",
-    "                print(\"Invalid time format. Please use the format HH:MM.\")\n",
-    "\n",
-    "\n",
-    "    # Check if an appointment already exists at the same date and time\n",
-    "    with open(\"rdv.txt\", \"r\") as f:\n",
-    "        for line in f:\n",
-    "            c, d, t = line.strip().split(\";\")\n",
-    "            if d == date and t == temps:\n",
-    "                while True:\n",
-    "                    choice = input(\"An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: \")\n",
-    "                    if choice.lower() == \"change\":\n",
-    "                        \n",
-    "                        while True:\n",
-    "                            date = input(\"Enter the new date of the appointment DD/MM/YYYY: \")\n",
-    "                            if date.lower() == \"abort\":\n",
-    "                                print(\"Operation aborted.\")\n",
-    "                                return\n",
-    "                            else:\n",
-    "                                try:\n",
-    "                                    # Parse the date using the datetime.strptime function\n",
-    "                                    # If the date is in the correct format, this will return a datetime object\n",
-    "                                    appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
-    "                                    break\n",
-    "                                except ValueError:\n",
-    "                                    # If the date is not in the correct format, a ValueError is raised\n",
-    "                                    print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
-    "\n",
-    "                        while True:\n",
-    "                            temps = input(\"Enter the new time of the appointment HH:MM: \")\n",
-    "                            if temps.lower() == \"abort\":\n",
-    "                                print(\"Operation aborted.\")\n",
-    "                                return\n",
-    "                            else:\n",
-    "                                try:\n",
-    "                                    # Parse the time using the datetime.strptime function\n",
-    "                                    # If the time is in the correct format, this will return a datetime object\n",
-    "                                    appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
-    "                                    break\n",
-    "                                except ValueError:\n",
-    "                                    # If the time is not in the correct format, a ValueError is raised\n",
-    "                                    print(\"Invalid time format. Please use the format HH:MM.\")\n",
-    "                        break\n",
-    "                    elif choice.lower() == \"abort\":\n",
-    "                        print(\"Operation aborted.\")\n",
-    "                        return\n",
-    "                        break\n",
-    "                    else:\n",
-    "                        print(\"Invalid choice. Please enter 'Change' to input a new date and time or 'Abort' to abort.\")\n",
-    "                        \n",
-    "\n",
-    "    #rdvs[\"cin\"].append(cin_rdv)\n",
-    "    #rdvs[\"date\"].append(date)\n",
-    "    #rdvs[\"time\"].append(temps)   \n",
-    "\n",
-    "\n",
-    "    # Open the file in write mode\n",
-    "    with open(\"rdv.txt\", \"a\") as file:\n",
-    "        file.write('%s;%s;%s\\n' % (cin_rdv, date, temps))\n",
-    "        print(\"Appointment successfully added.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "id": "e41589db",
+   "execution_count": null,
+   "id": "a9575526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,30 +235,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "55250689",
+   "execution_count": 2,
+   "id": "e38198e1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the patient's CIN: 11111111\n",
-      "CIN not found. Please try again.\n",
-      "Enter the patient's CIN: 88888888\n",
-      "Enter the date of the appointment DD/MM/YYYY: 13/11/3333\n",
-      "Enter the the time of the appointment HH:MM: 11:11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "delete_appointment()"
+    "def get_cin():\n",
+    "    while True:\n",
+    "        cin = input('Please enter a CIN:')\n",
+    "        if cin.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "\n",
+    "        if cin.isdigit() and len(cin) == 8:\n",
+    "            if not check_cin(cin):\n",
+    "                return cin\n",
+    "            else:\n",
+    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def check_cin(cin):\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def check_appointment_availability(date, time):\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if date == date_rdv and time == time_rdv:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "def get_date():\n",
+    "    while True:\n",
+    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "        if date.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "                if check_date(appointment_date):\n",
+    "                    return date\n",
+    "                else:\n",
+    "                    print(\"The appointment date must be in the future. Please enter a new date.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "\n",
+    "def get_time(date):\n",
+    "    while True:\n",
+    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "        if temps.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
+    "                return temps\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid time format. Please use the format HH:MM.\")\n",
+    "\n",
+    "def check_date(appointment_date):\n",
+    "    now = datetime.now()\n",
+    "    if appointment_date < now:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "def add_appointment():\n",
+    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    while True:\n",
+    "        # Get the date input from the user\n",
+    "        date = get_date()\n",
+    "        if date is None:\n",
+    "            return\n",
+    "\n",
+    "        # Get the time input from the user\n",
+    "        time = get_time(date)\n",
+    "        if time is None:\n",
+    "            return\n",
+    "\n",
+    "        # Check if the appointment is available\n",
+    "        if not check_appointment_availability(date, time):\n",
+    "            break\n",
+    "\n",
+    "        print(\"An appointment already exists at this date and time. Please enter a new date and time.\")\n",
+    "\n",
+    "    # Add the appointment to the file\n",
+    "    with open(\"rdv.txt\", \"a\") as file:\n",
+    "        file.write('%s;%s;%s\\n' % (cin, date, time))\n",
+    "        print(\"Appointment successfully added.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "f7186ad0",
+   "execution_count": 4,
+   "id": "984af28a",
    "metadata": {},
    "outputs": [
     {
@@ -386,100 +350,17 @@
      "output_type": "stream",
      "text": [
       "Enter 'Abort' to cancel the operation at any step!\n",
-      "Please enter a CIN:88888888\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:88888888\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:88888888\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:88888888\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:88888888\n",
-      "This CIN is already in use. Please enter a valid CIN.\n",
-      "Please enter a CIN:66\n",
-      "Invalid CIN. Please enter an 8-digit integer.\n",
-      "Please enter a CIN:Aort\n",
-      "Invalid CIN. Please enter an 8-digit integer.\n",
-      "Please enter a CIN:Abort\n",
+      "Please enter a CIN:11111111\n",
+      "Enter the date of the appointment DD/MM/YYYY: \n",
+      "Invalid date format. Please use the format DD/MM/YYYY.\n",
+      "Enter the date of the appointment DD/MM/YYYY: abort\n",
       "Operation aborted.\n"
-     ]
-    }
-   ],
-   "source": [
-    "add_patient()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
-   "id": "915a3221",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter 'Abort' to cancel the operation at any step!\n",
-      "Please enter the CIN of the patient you want to delete:99999999\n",
-      "Patient successfully deleted.\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_patient()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "97ea0eb0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cin': ['11111111', '66666666', '33333333', '55555555', '77998866'], 'nom': ['Kek', 'Ahmed', 'Abort', 'Ape', 'Ape'], 'prenom': ['W', 'bnb', 'Aort', 'Ben Marzouk', 'Burden'], 'sexe': ['Male', 'Male', 'Male', 'Male', 'Male'], 'age': ['30', '33', '4', '66', '44']}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(DPatient)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 139,
-   "id": "972fd061",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter 'Abort' to cancel the operation at any step!\n",
-      "Please enter a CIN:55555555\n",
-      "Enter the date of the appointment DD/MM/YYYY: 11/11/3033\n",
-      "Enter the the time of the appointment HH:MM: 11:11\n",
-      "An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: change\n",
-      "An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: 11/11/3033\n",
-      "Invalid choice. Please enter 'Change' to input a new date and time or 'Abort' to abort.\n",
-      "An appointment already exists at this date and time. Enter 'Change' to input a new date and time or 'Abort' to abort: change\n",
-      "Appointment successfully added.\n"
      ]
     }
    ],
    "source": [
     "add_appointment()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f64a3a7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
