--- a/Project py.ipynb
+++ b/Project py.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8d2c2c19",
+   "execution_count": 2,
+   "id": "d25152ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2a5d5e3",
+   "execution_count": 3,
+   "id": "f0549787",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,8 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f4c4443",
+   "execution_count": 4,
+   "id": "790de672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,98 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a9575526",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def delete_appointment():\n",
-    "    with open(\"rdv.txt\", \"r\") as file:\n",
-    "        lines = file.readlines()\n",
-    "\n",
-    "    found = False\n",
-    "\n",
-    "    while True:\n",
-    "        cin = input(\"Enter the patient's CIN: \")\n",
-    "        if cin.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "        if not cin.isdigit() or len(cin) != 8:\n",
-    "            print(\"Invalid CIN. CIN must be an 8-digit integer.\")\n",
-    "        else:\n",
-    "            for line in lines:\n",
-    "                parts = line.split(\";\")\n",
-    "                if parts[0] == cin:\n",
-    "                    found = True\n",
-    "                    break\n",
-    "            if found:\n",
-    "                break\n",
-    "            else:\n",
-    "                print(\"CIN not found. Please try again.\")\n",
-    "\n",
-    "    while True:\n",
-    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
-    "        if date.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "        else:\n",
-    "            try:\n",
-    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
-    "                break\n",
-    "            except ValueError:\n",
-    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
-    "\n",
-    "    while True:\n",
-    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
-    "        if temps.lower() == \"abort\":\n",
-    "            print(\"Operation aborted.\")\n",
-    "            return\n",
-    "        else:\n",
-    "            try:\n",
-    "                appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
-    "                break\n",
-    "            except ValueError:\n",
-    "                print(\"Invalid time format. Please use the format HH:MM.\")\n",
-    "\n",
-    "    with open(\"rdv.txt\", \"w\") as file:\n",
-    "        for line in lines:\n",
-    "            parts = line.split(\";\")\n",
-    "            if parts[0] != cin or parts[1] != date or parts[2] != time:\n",
-    "                file.write(line)\n",
-    "        if not found:\n",
-    "            while True:\n",
-    "                choice = input(\"Appointment not found. Please enter valid data or type 'Abort' to cancel the operation.\")\n",
-    "                if choice.lower() == \"abort\":\n",
-    "                    print(\"Operation aborted.\")\n",
-    "                    return\n",
-    "                date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
-    "                if date.lower() == \"abort\":\n",
-    "                    print(\"Operation aborted.\")\n",
-    "                    return\n",
-    "                else:\n",
-    "                    try:\n",
-    "                        appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
-    "                        break\n",
-    "                    except ValueError:\n",
-    "                        print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
-    "                temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
-    "                if temps.lower() == \"abort\":\n",
-    "                    print(\"Operation aborted.\")\n",
-    "                    return\n",
-    "                else:\n",
-    "                    try:\n",
-    "                        appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
-    "                        break\n",
-    "                    except ValueError:\n",
-    "                        print(\"Invalid time format. Please use the format HH:MM.\")\n",
-    "            file.write(f\"{cin};{date};{time}\\n\")\n",
-    "            print(\"Appointment successfully deleted.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e38198e1",
+   "execution_count": 5,
+   "id": "fbf74e71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,31 +251,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "984af28a",
+   "execution_count": 6,
+   "id": "c7647cca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter 'Abort' to cancel the operation at any step!\n",
-      "Please enter a CIN:11111111\n",
-      "Enter the date of the appointment DD/MM/YYYY: \n",
-      "Invalid date format. Please use the format DD/MM/YYYY.\n",
-      "Enter the date of the appointment DD/MM/YYYY: abort\n",
-      "Operation aborted.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "add_appointment()"
+    "def get_cin():\n",
+    "    while True:\n",
+    "        cin = input('Please enter a CIN:')\n",
+    "        if cin.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "\n",
+    "        if cin.isdigit() and len(cin) == 8:\n",
+    "            if not check_cin(cin):\n",
+    "                return cin\n",
+    "            else:\n",
+    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def check_cin(cin):\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def check_appointment_availability(date, time):\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if date == date_rdv and time == time_rdv:\n",
+    "                return True\n",
+    "        return False\n",
+    "\n",
+    "def get_date():\n",
+    "    while True:\n",
+    "        date = input(\"Enter the date of the appointment DD/MM/YYYY: \")\n",
+    "        if date.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_date = datetime.strptime(date, \"%d/%m/%Y\")\n",
+    "                if check_date(appointment_date):\n",
+    "                    return date\n",
+    "                else:\n",
+    "                    print(\"The appointment date must be in the future. Please enter a new date.\")\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid date format. Please use the format DD/MM/YYYY.\")\n",
+    "\n",
+    "def get_time(date):\n",
+    "    while True:\n",
+    "        temps = input(\"Enter the the time of the appointment HH:MM: \")\n",
+    "        if temps.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            try:\n",
+    "                appointment_time = datetime.strptime(temps, \"%H:%M\")\n",
+    "                return temps\n",
+    "            except ValueError:\n",
+    "                print(\"Invalid time format. Please use the format HH:MM.\")\n",
+    "\n",
+    "def check_date(appointment_date):\n",
+    "    now = datetime.now()\n",
+    "    if appointment_date < now:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "def edit_appointment():\n",
+    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    # Find all the appointments for the given CIN\n",
+    "    appointments = []\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin_rdv == cin:\n",
+    "                appointments.append((date_rdv, time_rdv))\n",
+    "\n",
+    "    # Present the list of appointments to the user and ask them to choose which one to edit\n",
+    "        if len(appointments) == 0:\n",
+    "            print(\"There are no appointments to edit.\")\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "        else:\n",
+    "            print(\"Which appointment would you like to edit? Enter the number of the appointment:\")\n",
+    "            for i, appointment in enumerate(appointments):\n",
+    "                date_rdv, time_rdv = appointment\n",
+    "                appointment_date = datetime.strptime(date_rdv, \"%d/%m/%Y\")\n",
+    "                appointment_time = datetime.strptime(time_rdv, \"%H:%M\")\n",
+    "                print(\"%d. %s at %s\" % (i+1, appointment_date.strftime(\"%d/%m/%Y\"), appointment_time.strftime(\"%H:%M\")))\n",
+    "            while True:\n",
+    "                try:\n",
+    "                    choice = int(input()) - 1\n",
+    "                    original_date, original_time = appointments[choice]\n",
+    "                    break\n",
+    "                except (ValueError, IndexError):\n",
+    "                    print(\"Invalid choice. Please try again.\")\n",
+    "\n",
+    "    # Get the new date and time for the appointment\n",
+    "    print(\"Enter the new date and time for the appointment:\")\n",
+    "    date = get_date()\n",
+    "    if date is None:\n",
+    "        return\n",
+    "    time = get_time(date)\n",
+    "    if time is None:\n",
+    "        return\n",
+    "\n",
+    "    # Check if the new appointment time is available\n",
+    "    while check_appointment_availability(date, time):\n",
+    "        print(\"An appointment already exists at this date and time. Please enter a new date and time.\")\n",
+    "        date = get_date()\n",
+    "        if date is None:\n",
+    "            return\n",
+    "        time = get_time(date)\n",
+    "        if time is None:\n",
+    "            return\n",
+    "\n",
+    "    # Update the appointment in rdv.txt\n",
+    "    new_appointments = []\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin_rdv == cin and date_rdv == original_date and time_rdv == original_time:\n",
+    "                new_appointments.append(cin + ';' + date + ';' + time)\n",
+    "            else:\n",
+    "                new_appointments.append(line.strip())\n",
+    "\n",
+    "    with open(\"rdv.txt\", 'w') as f:\n",
+    "        for appointment in new_appointments:\n",
+    "            f.write(appointment + '\\n')\n",
+    "    print(\"Appointment successfully edited.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c6d6076f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##New version\n",
+    "\n",
+    "\n",
+    "def get_cin():\n",
+    "    while True:\n",
+    "        cin = input('Please enter a CIN:')\n",
+    "        if cin.lower() == \"abort\":\n",
+    "            print(\"Operation aborted.\")\n",
+    "            return None\n",
+    "\n",
+    "        if cin.isdigit() and len(cin) == 8:\n",
+    "            if not check_cin(cin):\n",
+    "                return cin\n",
+    "            else:\n",
+    "                print(\"CIN not found. Please enter a valid CIN.\")\n",
+    "        else:\n",
+    "            print(\"Invalid CIN. Please enter an 8-digit integer.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "def check_cin(cin):\n",
+    "    with open(\"DPatient.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            if cin in line:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "\n",
+    "def delete_appointment():\n",
+    "    print(\"Enter 'Abort' to cancel the operation at any step!\")\n",
+    "    cin = get_cin()\n",
+    "    if cin is None:\n",
+    "        return\n",
+    "\n",
+    "    # Find all the appointments for the given CIN\n",
+    "# Find all the appointments for the given CIN\n",
+    "    appointments = []\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        for line in f:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin_rdv == cin:\n",
+    "                appointments.append((date_rdv, time_rdv))\n",
+    "\n",
+    "    if len(appointments) == 0:\n",
+    "        print(\"There are no appointments to delete.\")\n",
+    "        print(\"Operation aborted.\")\n",
+    "        return None\n",
+    "    else:\n",
+    "        while True:\n",
+    "            print(\"Enter the number of the appointment that you want to delete, or 'Abort' to cancel the operation:\")\n",
+    "            for i, appointment in enumerate(appointments):\n",
+    "                date_rdv, time_rdv = appointment\n",
+    "                appointment_date = datetime.strptime(date_rdv, \"%d/%m/%Y\")\n",
+    "                appointment_time = datetime.strptime(time_rdv, \"%H:%M\")\n",
+    "                print(\"%d. %s at %s\" % (i+1, appointment_date.strftime(\"%d/%m/%Y\"), appointment_time.strftime(\"%H:%M\")))\n",
+    "\n",
+    "            choice = input()\n",
+    "            if choice.lower() == \"abort\":\n",
+    "                print(\"Operation aborted.\")\n",
+    "                return None\n",
+    "\n",
+    "            try:\n",
+    "                choice = int(choice) - 1\n",
+    "                original_date, original_time = appointments[choice]\n",
+    "                break\n",
+    "            except (ValueError, IndexError):\n",
+    "                print(\"Invalid choice. Please try again.\")\n",
+    "\n",
+    "    # Delete the selected appointment\n",
+    "    with open(\"rdv.txt\", 'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "\n",
+    "    with open(\"rdv.txt\", 'w') as f:\n",
+    "        for line in lines:\n",
+    "            cin_rdv, date_rdv, time_rdv = line.strip().split(';')\n",
+    "            if cin_rdv != cin or (cin_rdv == cin and (date_rdv != original_date or time_rdv != original_time)):\n",
+    "                f.write(\"%s;%s;%s\\n\" % (cin_rdv, date_rdv, time_rdv))\n",
+    "\n",
+    "    print(\"Appointment successfully deleted.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "277df86b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -379,12 +507,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "c2987bf884b33d4ac0d131f2cc512127de39608db1d626b88cf922dfeda625a8"
-   }
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
